--- a/week_1_quadratic.ipynb
+++ b/week_1_quadratic.ipynb
@@ -16,13 +16,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 61,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def solve_quad(b, c):\n",
+    "    \n",
+    "    import math\n",
+    "    import cmath \n",
+    "    \n",
     "    \"\"\"Solve a quadratic equation, x**2 + bx + c = 0.\n",
     "    \n",
     "    Parameters\n",
@@ -35,7 +38,27 @@
     "    x1, x2 : float or complex\n",
     "       Roots.\n",
     "    \"\"\"\n",
-    "    # ... enter your code here ..."
+    "    D = b**2 - 4*c\n",
+    "    \n",
+    "    if abs(b**2/c) > 10**4: # решение для случая экстремально отличающихся по модулю значений b  и  c\n",
+    "        x1 = -b*(1 - c/b**2)\n",
+    "        x2 =  -c/b\n",
+    "    elif abs(c/b**2) > 10**4:\n",
+    "        x1 = (-b/2 - complex(0,1)*cmath.sqrt(c)*(1 - b**2/8/c))\n",
+    "        x2 = (-b/2 + complex(0,1)*cmath.sqrt(c)*(1 - b**2/8/c))\n",
+    "        \n",
+    "    else:\n",
+    "            \n",
+    "        if D == 0:\n",
+    "            x1 = -b/2\n",
+    "            x2 = x1\n",
+    "        else:\n",
+    "            x1 = (-b - cmath.sqrt(D))/2\n",
+    "            x2 = (-b + cmath.sqrt(D))/2\n",
+    "    lst = [x1, x2]\n",
+    "    a = tuple(lst)\n",
+    "    \n",
+    "    return a\n"
    ]
   },
   {
@@ -51,10 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 19,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from numpy import allclose"
@@ -62,10 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 48,
+   "metadata": {},
    "outputs": [],
    "source": [
     "variants = [{'b': 4.0, 'c': 3.0},\n",
@@ -77,25 +96,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "for var in variants:\n",
     "    x1, x2 = solve_quad(**var)\n",
     "    print(allclose(x1*x2, var['c']))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -114,7 +134,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
