--- a/week_2_Householder_QR.ipynb
+++ b/week_2_Householder_QR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,23 +53,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(array([5., 0., 0.]),\n",
-       " array([[ 2.22044605e-16,  6.00000000e-01,  8.00000000e-01],\n",
-       "        [ 6.00000000e-01,  6.40000000e-01, -4.80000000e-01],\n",
-       "        [ 8.00000000e-01, -4.80000000e-01,  3.60000000e-01]]))"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "def householder(vec):\n",
@@ -96,8 +82,7 @@
     "    u = (vec - y)/np.linalg.norm(vec-y)\n",
     "    H = np.eye(vec.shape[0]) - 2*np.outer(u, u)\n",
     "\n",
-    "    return H@vec, H\n",
-    "householder(np.array([0, 3, 4]))"
+    "    return H@vec, H\n"
    ]
   },
   {
@@ -109,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -270,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +372,7 @@
    "metadata": {},
    "source": [
     "Матрицы отличаются, так как QR-разложение не единственно. То есть в библиотечной реализации матрица R выбирается иначе. Можно привести пример: формально( так как определитель таки равен нулю) единичная матрица I может быть представлена в виде QR-разложения как произведение единичных матриц, так единичная матрица одновременно является и верхнетреугольной и ортогональной. Но также разложением будет являться и произведение двух \"минус-единичных\" матриц. Вот и неоднозначность...\n",
-    "Более общее утверждение состоит в следующем: A = QR <==> A=QPP^(-1)R это верно для некоторых P (для ортогональных и верхнетруегольных одновременно) --> разложение на (QP) и (P^(-1)R) тоже является искомым разложенинем. Но такие Р могут быть только диагональными, и при этом PP^(-1) = I, ---> см.частный случай.\n"
+    "Более общее утверждение состоит в следующем: A = QR <==> A=QPP^(-1)R это верно для некоторых P (для ортогональных и верхнетруегольных одновременно) --> разложение на (QP) и (P^(-1)R) тоже является искомым разложенинем. Но такие Р могут быть только диагональными, и при этом PP^(-1) = I, ---> см.частный случай.(Если матрица не квадаратная, а прямоугольная, то (так как нижние строки (если m>n, то m-n) состоят из нулей)  несколько столбцов может отличаться не только знаком, но и модулем.\n"
    ]
   },
   {
@@ -427,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
